--- a/Tugas/index.html
+++ b/Tugas/index.html
@@ -56,63 +56,121 @@
 
 <script>
 
+   // const BASE_URL = "https://www.themealdb.com/api/json/v1/1/lookup.php?i=52772";
+   // const BASE_URL_SEARCH = "https://www.themealdb.com/api/json/v1/1/search.php?s=";
+   // const INPUT_USER = $("#search");   
+
+   // $(document).ready(function() {
+   //   $.ajax({
+   //    type: "GET",
+   //    url: BASE_URL,
+   //    dataType: "json",
+   //    success: function(response) {
+   //      const meals = response.meals[0];
+   //      let ingredients = [ 
+   //          meals.strIngredient1, 
+   //          meals.strIngredient2, 
+   //          meals.strIngredient3, 
+   //          meals.strIngredient4, 
+   //          meals.strIngredient5, 
+   //          meals.strIngredient6, 
+   //          meals.strIngredient7, 
+   //          meals.strIngredient8, 
+   //          meals.strIngredient9 
+   //       ]; 
+
+   //      $(".card img").attr("src", meals.strMealThumb);
+   //      $(".card h1").text(meals.strMeal);
+   //      $(".card #instructions").text(meals.strInstructions);
+   //      $(".card #category").text("Kategori : " + meals.strCategory);
+   //      $(".card #area").text("From : " + meals.strArea);
+   //      $(".card #ingredients").text(ingredients);
+
+   //    }
+   //   });
+   // });
+
+   // $("#btn").click(function () {
+   //    $(".result").css("display", "block");  // Memperbaiki penampilan elemen `.result`
+   //    $.ajax({
+   //       type: "GET",
+   //       url: BASE_URL_SEARCH + INPUT_USER.val(),  // Menggunakan BASE_URL_SEARCH untuk pencarian
+   //       dataType: "json",
+   //       success: function (response) {
+   //          if (response.meals) {
+   //             const meals = response.meals[0];
+
+   //             $(".result img").attr("src", meals.strMealThumb);
+   //             $(".result h1").text(meals.strMeal);
+   //             $(".result p").text(meals.strInstructions);
+   //          } 
+   //          else {
+   //             alert("Makanan tidak ditemukan!");
+   //          }
+   //       },
+   //       error: function() {
+   //          alert("Terjadi kesalahan. Silakan coba lagi.");
+   //       }
+   //    });
+   // });
+
+   // Dalam bentuk javaScript Vanilla
+   
    const BASE_URL = "https://www.themealdb.com/api/json/v1/1/lookup.php?i=52772";
    const BASE_URL_SEARCH = "https://www.themealdb.com/api/json/v1/1/search.php?s=";
-   const INPUT_USER = $("#search");   
+   const inputUser = document.getElementById("search");
+   const btn = document.getElementById("btn");
 
-   $(document).ready(function() {
-     $.ajax({
-      type: "GET",
-      url: BASE_URL,
-      dataType: "json",
-      success: function(response) {
-        const meals = response.meals[0];
-        let ingredients = [ 
-            meals.strIngredient1, 
-            meals.strIngredient2, 
-            meals.strIngredient3, 
-            meals.strIngredient4, 
-            meals.strIngredient5, 
-            meals.strIngredient6, 
-            meals.strIngredient7, 
-            meals.strIngredient8, 
-            meals.strIngredient9 
-         ]; 
+   document.addEventListener("DOMContentLoaded", function () {
+      fetch(BASE_URL)
+         .then(response => response.json())
+         .then(data => {
+               const meals = data.meals[0];
+               const ingredients = [
+                  meals.strIngredient1,
+                  meals.strIngredient2,
+                  meals.strIngredient3,
+                  meals.strIngredient4,
+                  meals.strIngredient5,
+                  meals.strIngredient6,
+                  meals.strIngredient7,
+                  meals.strIngredient8,
+                  meals.strIngredient9
+               ];
 
-        $(".card img").attr("src", meals.strMealThumb);
-        $(".card h1").text(meals.strMeal);
-        $(".card #instructions").text(meals.strInstructions);
-        $(".card #category").text("Kategori : " + meals.strCategory);
-        $(".card #area").text("From : " + meals.strArea);
-        $(".card #ingredients").text(ingredients);
-
-      }
-     });
+               document.querySelector(".card img").src = meals.strMealThumb;
+               document.querySelector(".card h1").textContent = meals.strMeal;
+               document.querySelector(".card #instructions").textContent = meals.strInstructions;
+               document.querySelector(".card #category").textContent = "Kategori : " + meals.strCategory;
+               document.querySelector(".card #area").textContent = "From : " + meals.strArea;
+               document.querySelector(".card #ingredients").textContent = ingredients.join(", ");
+         })
+         .catch(error => console.error("Error:", error));
    });
 
-   $("#btn").click(function () {
-      $(".result").css("display", "block");  // Memperbaiki penampilan elemen `.result`
-      $.ajax({
-         type: "GET",
-         url: BASE_URL_SEARCH + INPUT_USER.val(),  // Menggunakan BASE_URL_SEARCH untuk pencarian
-         dataType: "json",
-         success: function (response) {
-            if (response.meals) {
-               const meals = response.meals[0];
+   btn.addEventListener("click", function () {
+      document.querySelector(".result").style.display = "block";
+      fetch(BASE_URL_SEARCH + inputUser.value)
+         .then(response => response.json())
+         .then(data => {
+               if (data.meals) {
+                  const meals = data.meals[0];
 
-               $(".result img").attr("src", meals.strMealThumb);
-               $(".result h1").text(meals.strMeal);
-               $(".result p").text(meals.strInstructions);
-            } 
-            else {
-               alert("Makanan tidak ditemukan!");
-            }
-         },
-         error: function() {
-            alert("Terjadi kesalahan. Silakan coba lagi.");
-         }
-      });
+                  document.querySelector(".result img").src = meals.strMealThumb;
+                  document.querySelector(".result h1").textContent = meals.strMeal;
+                  document.querySelector(".result p").textContent = meals.strInstructions;
+               } else {
+                  document.querySelector(".result h1").textContent = "MAKANAN TIDAK DITEMUKAN!";
+                  document.querySelector(".result img").style.display = "none";
+                  document.querySelector(".result p").style.display = "none";
+               }
+         })
+         .catch(error => {
+               console.error("Error:", error);
+               alert("Terjadi kesalahan. Silakan coba lagi.");
+         });
    });
+
 
 </script>
 
